cpp/ql/test/library-tests/dataflow/stackaddress/StackPointerFlowsToUse.expected
ERROR: Could not resolve module semmle.code.cpp.dataflow.old.StackAddress (StackPointerFlowsToUse.ql:2,8-49)
ERROR: Could not resolve predicate stackPointerFlowsToUse/4 (StackPointerFlowsToUse.ql:7,3-25)
